# rustica

./: .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DELIVERY.md  INDEX.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  STATS.md  SUCCESS.md  package-lock.json  package.json  tsconfig.json
docs/: API.md  ARCHITECTURE.md  COMPARISON.md  DIAGRAMS.md  GETTING_STARTED.md  INDEX.md
examples/: REACT_APP_GUIDE.md  custom-messages.ts  forms.tsx  quick-test.ts  standalone.ts
examples/react-form-app/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
examples/react-form-app/src/: App.css  App.tsx  index.css  main.tsx
scripts/: build.sh  setup.sh
src/: index.ts  lib.rs  schema.rs  validator.rs  wasm.rs
src/form/: index.ts
src/react/: index.tsx
src/schema/: builders.ts  index.ts  types.ts
src/validator/: index.ts
tests/: coverage.test.ts  custom-messages.test.ts  form.test.ts  schema.test.ts  validator.test.ts
